workflow_output/cppcheck_output.txt
Checking ../src/Augment.cpp ...
1/11 files checked 1% done
Checking ../src/Auth.cpp ...
2/11 files checked 5% done
Checking ../src/Database.cpp ...
3/11 files checked 15% done
Checking ../src/Dimension.cpp ...
4/11 files checked 16% done
Checking ../src/Employer.cpp ...
5/11 files checked 31% done
Checking ../src/Listing.cpp ...
../src/Listing.cpp:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
6/11 files checked 48% done
Checking ../src/Matcher.cpp ...
../src/Matcher.cpp:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
7/11 files checked 71% done
Checking ../src/RouteController.cpp ...
../src/RouteController.cpp:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
../external_libraries/Crow/include/crow/routing.h:1815:17: error: Rethrowing current exception with 'throw;', it seems there is no current exception to rethrow. If there is no current exception this calls std::terminate(). More: https://isocpp.org/wiki/faq/exceptions#throw-without-an-object [rethrowNoCurrentException]
                throw;
                ^
Checking ../src/RouteController.cpp: CROW_CAN_USE_CPP14...
Checking ../src/RouteController.cpp: CROW_CAN_USE_CPP17;CROW_GCC83_WORKAROUND...
Checking ../src/RouteController.cpp: CROW_ENABLE_COMPRESSION...
Checking ../src/RouteController.cpp: CROW_ENABLE_DEBUG...
Checking ../src/RouteController.cpp: CROW_ENABLE_LOGGING...
Checking ../src/RouteController.cpp: CROW_ENABLE_SSL...
Checking ../src/RouteController.cpp: CROW_ENABLE_SSL;CROW_USE_BOOST...
Checking ../src/RouteController.cpp: CROW_ENFORCE_WS_SPEC...
Checking ../src/RouteController.cpp: CROW_GCC83_WORKAROUND...
Checking ../src/RouteController.cpp: CROW_JSON_NO_ERROR_CHECK...
Checking ../src/RouteController.cpp: CROW_MSVC_WORKAROUND...
8/11 files checked 96% done
Checking ../src/User.cpp ...
9/11 files checked 97% done
Checking ../src/Worker.cpp ...
10/11 files checked 99% done
Checking ../src/main.cpp ...
../src/main.cpp:0:0: information: Limiting analysis of branches. Use --check-level=exhaustive to analyze all branches. [normalCheckLevelMaxBranches]

^
Checking ../src/main.cpp: CROW_CAN_USE_CPP14...
Checking ../src/main.cpp: CROW_CAN_USE_CPP17;CROW_GCC83_WORKAROUND...
Checking ../src/main.cpp: CROW_ENABLE_COMPRESSION...
Checking ../src/main.cpp: CROW_ENABLE_DEBUG...
Checking ../src/main.cpp: CROW_ENABLE_LOGGING...
Checking ../src/main.cpp: CROW_ENABLE_SSL...
Checking ../src/main.cpp: CROW_ENABLE_SSL;CROW_USE_BOOST...
Checking ../src/main.cpp: CROW_ENFORCE_WS_SPEC...
Checking ../src/main.cpp: CROW_GCC83_WORKAROUND...
Checking ../src/main.cpp: CROW_JSON_NO_ERROR_CHECK...
Checking ../src/main.cpp: CROW_JSON_USE_MAP...
11/11 files checked 100% done
nofile:0:0: information: Too many #ifdef configurations - cppcheck only checks 12 configurations. Use --force to check all configurations. For more details, use --enable=information. [toomanyconfigs]

